3-08 구현