@@ -2,14 +2,19 @@ package com.back.answer;
 
 import com.back.question.Question;
 import com.back.question.QuestionService;
+import com.back.user.SiteUser;
+import com.back.user.UserService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
+
+import java.security.Principal;
 
 @Controller
 @RequiredArgsConstructor
@@ -18,15 +23,19 @@ public class AnswerController {
 
     private final QuestionService questionService;
     private final AnswerService answerService;
+    private final UserService userService;
 
     @PostMapping("/create/{id}")
-    public String createAnswer(Model model, @PathVariable("id") int id, @Valid AnswerForm answerForm, BindingResult bindingResult) {
+    @PreAuthorize("isAuthenticated()")
+    public String createAnswer(Model model, @PathVariable("id") Integer id,
+                               @Valid AnswerForm answerForm, BindingResult bindingResult, Principal principal) {
         Question question = questionService.getQuestion(id);
+        SiteUser siteUser = userService.getUser(principal.getName());
         if (bindingResult.hasErrors()) {
             model.addAttribute("question", question);
             return "question_detail";
         }
-        answerService.create(question, answerForm.getContent());
-        return "redirect:/question/detail/%s".formatted(id);
+        answerService.create(question, answerForm.getContent(), siteUser);
+        return String.format("redirect:/question/detail/%s", id);
     }
 }
